# shellsense

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  developer-guide.md  installation.md
examples/: basic_usage.md
installer/: install.sh
resources/: sample_config.json
scripts/: lint.sh  setup-dev.sh  test.sh
src/shellsense/: __init__.py  __main__.py  startup.py
src/shellsense/ai/: analytics.py  cache.py  config.py  context.py  core.py  memory.py  middleware.py  prompts.py  security.py  session.py  streaming.py  tokenizer.py
src/shellsense/automation/: engine.py  exporters.py  interactive.py  prompts.py  templates.py  validators.py
src/shellsense/cli/: app.py
src/shellsense/context/: __init__.py  inferrer.py  state.py
src/shellsense/core/: exceptions.py
src/shellsense/daemon/: __init__.py  client.py  server.py
src/shellsense/database/: manager.py  models.py
src/shellsense/intelligence/: context_collectors.py  engine.py  error_analysis.py  formatter.py  git_intelligence.py  log_analysis.py  privacy.py  prompt_builder.py  script_analysis.py  service_intelligence.py
src/shellsense/knowledge/: cache.py  categories.py  context.py  dataset.py  discovery.py  discovery_loader.py  engine.py  examples.py  explain.py  fuzzy.py  history.py  loader.py  ranking.py  recommend.py  related.py  risk.py  search.py  suggest.py
src/shellsense/marketplace/: __init__.py  cli.py  collaboration.py  dependency.py  enterprise.py  exceptions.py  marketplace.py  models.py  repository.py  signatures.py
src/shellsense/plugins/: __init__.py  api.py  bus.py  cli.py  compatibility.py  exceptions.py  health.py  hooks.py  isolation.py  lifecycle.py  loader.py  manager.py  manifest.py  models.py  permissions.py  registry.py  scaffold.py
src/shellsense/shell/: autocomplete.py  completion.py  detect.py  diagnostics.py  hooks.py  installer.py  integration.py  keyboard.py  prompt.py  ss-autosuggest.service  warnings.py
src/shellsense/utils/: config.py  i18n.py  logging.py  paths.py  platform.py  telemetry.py
tests/: conftest.py  test_ai.py  test_automation.py  test_cache.py  test_categories.py  test_cli.py  test_config.py  test_context.py  test_database.py  test_dataset.py  test_examples.py  test_explain.py  test_fuzzy.py  test_history.py  test_intelligence.py  test_loader.py  test_logging.py  test_marketplace.py  test_plugins.py  test_ranking.py  test_recommend.py  test_related.py  test_risk.py  test_search.py  test_shell.py  test_suggest.py
(+64 files in other folders)
